--- a/src/SignUpForm.form
+++ b/src/SignUpForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="240"/>
+      <xy x="20" y="20" width="500" height="250"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -117,14 +117,23 @@
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="f73b5" class="javax.swing.JButton" binding="btnSignUp">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Sign Up"/>
+                </properties>
+              </component>
+            </children>
           </grid>
-          <component id="f73b5" class="javax.swing.JButton" binding="btnSignUp">
+          <component id="c137e" class="javax.swing.JButton" binding="btnLogin">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Sign Up"/>
+              <text value="Login"/>
             </properties>
           </component>
         </children>
